crates/validation/src/snapshots/validation__field_selection__tests__document_field_incompatible_and_location_required-2.snap
---
source: crates/validation/src/field_selection.rs
expression: "snap.field_outcomes.get(\"flow_document\").unwrap()"
---
Both(
    ConnectorRequiresLocation {
        reason: "root document projection required for standard updates",
    },
    ConnectorIncompatible {
        reason: "existing column has wrong type",
    },
)
