crates/validation/src/snapshots/validation__field_selection__tests__document_field_incompatible_and_location_required.snap
---
source: crates/validation/src/field_selection.rs
expression: snap.conflicts
---
[
    "conflict for field \"flow_document\": field's location is required by the connector (root document projection required for standard updates) but connector cannot support this field without a backfill (existing column has wrong type)",
]
