crates/validation/src/snapshots/validation__field_selection__tests__incompatible_sibling_of_required_location-3.snap
---
source: crates/validation/src/field_selection.rs
expression: "snap.field_outcomes.get(\"Alpha\").unwrap()"
---
Right(
    ConnectorIncompatible {
        reason: "existing column has wrong type",
    },
)
