crates/validation/src/snapshots/validation__field_selection__tests__live_document_by_not_found.snap
---
source: crates/validation/src/field_selection.rs
expression: snap.conflicts
---
[
    "conflict for field \"flow_document\": field is currently used to store the document but field does not exist within the source collection",
]
